# Rag

./: pyproject.toml  requirements.txt
0-DataIngestParsing/: 1-dataingestion.ipynb
VectorEmbeddingsAndDatabases/: embedding.ipynb
VectorStores/: 1-chromadb.ipynb  2-faiss.ipynb  3-Datastaxdb.ipynb
